# EE569_HW4

./: .gitignore  CMakeLists.txt  README.txt  code.txt
report/1a/: discrim_power.csv  knn_results.txt  pca_reconstruction_acc.txt  test_features.csv  train_features.csv
report/1b/: output.txt
report/2a/: q2a_results.txt
report/2b/: Mosaic_clahe.raw  q2b_results.txt
report/3b/: q3b_results.txt
report/3c/: cat_1_descriptors.txt  cat_2_descriptors.txt  cat_dog_descriptors.txt  dog_1_descriptors.txt  dog_2_descriptors.txt  q3c_results.txt
src/: Filter.cpp  Filter.h  Image.cpp  Image.h  Implementations.h  Utility.cpp  Utility.h  main.cpp  main_1a.cpp  main_2a.cpp  main_2b.cpp  main_3b.cpp  main_3c.cpp
src_python/: main_1a.py  main_1b.py  main_2a.py  main_2b.py  main_3c.py
